# ungoogled-chromium-windows

./: .gitmodules  flags.windows.gn  package.py  retag.sh  uptag.sh
.github/workflows/: build-images.yml  cross-build.yml  main.yml
cross-build/: Dockerfile.base  Makefile  README.md  base-setup.sh  build.sh  case-fold.sh  ccache.conf  gh-unburden.sh
patches/: series
patches/rorgoroth/: win64-avx512.patch
patches/ungoogled-chromium/windows/: optim.patch  windows-fix-bindgen-libclang-path.patch  windows-fix-generate-resource-allowed-list.patch  windows-fix-licenses-gn-path.patch  windows-use-system-tools.patch
skunk-tmp/: ghci-strategy.sh  ninja-compdb-extract.py
