google_api_key = "no"
google_default_client_id = "no"
google_default_client_secret = "no"
use_official_google_api_keys = false
is_clang=true
is_component_build=false
is_debug=false
is_official_build=true
target_os="win"
target_cpu="x64"
use_sysroot=false
dcheck_always_on=false
blink_symbol_level=0
v8_symbol_level=0
symbol_level=0
use_thin_lto=true
thin_lto_enable_optimizations=true
enable_media_drm_storage=true
enable_media_foundation_widevine_cdm=true
enable_widevine=true
ignore_missing_widevine_signing_cert=true
proprietary_codecs=true
ffmpeg_branding="Chrome"
treat_warnings_as_errors=false
chrome_pgo_phase=2
win_enable_cfg_guards=true
disable_fieldtrial_testing_config=true
enable_ffmpeg_video_decoders=true
enable_platform_hevc=true
enable_hevc_parser_and_hw_decoder=true
enable_platform_ac3_eac3_audio=true
enable_platform_dolby_vision=true
enable_platform_mpeg_h_audio=true
enable_mse_mpeg2ts_stream_parser=true
init_stack_vars_zero=true
toolchain_supports_rust_thin_lto=true
